# detsys-testkit

./: .bazelrc  .gitignore  BUILD  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  WORKSPACE  clojure-ws.bzl  default.nix  gazelle-ws.bzl  shell.nix  workspace_status_command.sh
doc/advanced-testing-mini-course/: CHANGELOG.md  LICENSE  Makefile  README.md  advanced-testing-mini-course.cabal  cabal.project  cabal.project.freeze
doc/advanced-testing-mini-course/app/: Main.hs
doc/advanced-testing-mini-course/ideas/: linearisable.md  syntax.md
doc/advanced-testing-mini-course/images/: simulation-eventloop.excalidraw
doc/advanced-testing-mini-course/src/: ATMC.lhs  Lec00Introduction.lhs  Lec01SMTesting.lhs  Lec02ConcurrentSMTesting.lhs  Lec03SMContractTesting.lhs  Lec04FaultInjection.lhs  Lec05SimulationTesting.lhs  Lec06WhiteboxCheckers.lhs  Lec07EfficientEventLoop.lhs  Lec08AsyncFileSystemIO.lhs  Lec09SMUpgrades.lhs  Lec10LibraryOrFramework.lhs
doc/advanced-testing-mini-course/src/ATMC/: Lec01SMTesting.lhs  Lec02ConcurrentSMTesting.lhs  Lec03SMContractTesting.lhs  Lec04FaultInjection.lhs  Lec05SimulationTesting.lhs  Lec06WhiteboxCheckers.lhs  Lec07EfficientEventLoop.lhs  Lec08AsyncFileSystemIO.lhs  Lec09SMUpgrades.lhs  Lec10LibraryOrFramework.lhs  Lec1SMTesting.lhs  Lec2ConcurrentSMTesting.lhs  Lec3SMContractTesting.lhs  Lec4FaultInjection.lhs  Lec5SimulationTesting.lhs  Lec5SimulationTestingV2.hs  Lec5SimulationTestingV3.hs  Lec6WhiteboxCheckers.lhs  Lec7EfficientEventLoop.lhs  Lec8AsyncFileSystemIO.lhs  Lec9SMUpgrades.lhs
doc/advanced-testing-mini-course/src/Experiment/: LineariseWithFault.hs  (+1 more)
doc/advanced-testing-mini-course/test/: LecTest.hs  Main.hs
doc/advanced-testing-mini-course/tools/: generate_readme.sh
src/checker/: .gitignore  BUILD.bazel  README.md  default.nix  deps.edn  graalvm.nix  mvn2nix-lock.json  pom.xml  shell.nix
src/checker/docker/: Dockerfile
src/checker/history/: list-append.edn
src/checker/nix/: sources.json
src/checker/resources/: BUILD.bazel
src/cli/: BUILD.bazel  default.nix  go.mod  go.sum  main.go
src/cli/cmd/: BUILD.bazel  db.go  debug.go  generator.go  logger.go  root.go  scheduler.go  status.go  utils.go  version.go  versions.go
src/db/: BUILD.bazel  db.go  default.nix  go.mod  go.sum  shell.nix
src/db/migrations/: 0_create_event_log.sql  1605014343_init.sql  1605785757_add_timestamp_table.sql  1607521895_add_logging_table.sql  1609756790_add_event_log.sql  1610455409_add_faults.sql  1611060819_add_execution_step_view.sql  1611069427_remove_heap_and_log_trace.sql  1611225124_add_history_view.sql  1611237448_remove_network_trace.sql  1611752988_add_run_info.sql  1611828200_remove_run_table.sql  1611834879_create_test_event.sql  1_create_views.sql
src/db/nix/: sources.json
src/debugger/internal/: BUILD.bazel  debugger.go  debugger_test.go  sequence.go  sequence_test.go
src/divergence/: BUILD.bazel  cabal.project  default.nix  divergence.cabal
src/divergence/app/: Main.hs
src/divergence/src/: Divergence.hs
src/executor/: BUILD.bazel  event.go  executor.go  executor_test.go  go.mod  go.sum  heap_trace.go
src/journal/: CHANGELOG.md  LICENSE  cabal.project  cabal.project.freeze  journal.cabal
src/journal/app/: Main.hs
src/journal/cbits/: atomic.c  mac_falloc.c
src/journal/src/: Journal.hs  OffsetMacro.hs
src/journal/test/: JournalTest.hs  Main.hs
src/ldfi/: BUILD.bazel  CHANGELOG.md  LICENSE  README.md  cabal.project  cabal.project.freeze  default.nix  ldfi.cabal  release.nix  requirements.txt  setup.py  shell.nix
src/ldfi/app/: Main.hs
src/ldfi/ldfi/: __init__.py
src/ldfi/src/: BUILD.bazel  Ldfi.hs  __init__.py  ldfi.py
src/ldfi/test/: LdfiTest.hs
src/ldfi/tests/: test_ldfi.py
src/ldfi2/: BUILD.bazel  Main.hs  README.md  cabal.project  default.nix  ldfi.cabal  ldfi2.nix  shell.nix  z3.nix
src/ldfi2/app/: Main.hs
src/ldfi2/src/: Ldfi.hs
src/ldfi2/test/: Driver.hs  LdfiTest.hs  Main.hs
src/lib/: BUILD.bazel  checker.go  default.nix  event.go  generator.go  go.mod  ldfi.go  lib.go  log.go  ltl.go  marshaler.go  scheduler.go  time.go  topology.go  util.go
src/logger/: BUILD.bazel  default.nix  go.mod  go.sum  lib.go  logger_test.go  main.go
src/ltl/: BUILD.bazel  LICENSE  cabal.project  default.nix  ltl.cabal
src/ltl/app/: GitHash.hs  Main.hs
src/ltl/src/: Ltl.hs
src/ltl/test/: Driver.hs
src/new-debugger/: cabal.project  detsys-debugger.cabal  fakeValues.df
src/new-debugger/src/: Debugger.hs
src/prototype-simple-http-servers/: CHANGELOG.md  README.md  cabal.project  simple-http-servers.cabal
src/prototype-simple-http-servers/src/: GHCEvent.hs  TCPServer.hs
src/runtime-prototype/: CHANGELOG.md  LICENSE  README.md  benchmark.sh  cabal.project  disruptor-README.md  event-loop-3.org  event-loop.org  stunt-double.cabal
src/runtime-prototype/app/: Main.hs
src/runtime-prototype/bench/: Main.hs
src/runtime-prototype/src/: Debugger.hs  DebuggerInternal.hs  Disruptor.hs  Scheduler.hs  StuntDouble.hs
src/runtime-prototype/test/: DisruptorTest.hs
src/scheduler/: .envrc  BUILD.bazel  README.md  default.nix  deps.edn  mvn2nix-lock.json  pom.xml  shell.nix
src/scheduler/.clj-kondo/: config.edn
src/scheduler/native-image/: jni-config.json  reflection-config.json  resource-config.json
src/scheduler/nix/: sources.json
src/scheduler/resources/: BUILD.bazel
src/scheduler2/: CHANGELOG.md  cabal.project  scheduler2.cabal
src/scheduler2/app/: Main.hs
src/scheduler2/src/: Scheduler.hs
src/stats/: LICENSE  README.md  cabal.project  default.nix  stats.cabal
src/stats/app/: Main.hs
src/stats/src/: Description.hs  Histogram.hs  Ltl.hs  Stats.hs  Storage.hs
src/sut/broadcast/: BUILD.bazel  broadcast.go  broadcast_test.go  go.mod  go.sum  marshaler.go  simple_deliv.go
src/sut/dumblog/: CHANGELOG.md  README.md  cabal.project  cabal.project.freeze  connect.sh  dumblog.cabal
src/sut/register/: BUILD.bazel  example_test.go  frontend1.go  frontend2.go  frontend3.go  frontend4.go  go.mod  go.sum  marshaler.go  messages.go  register.go
(+496 files in other folders)
