cabal-version:      2.4
name:               advanced-testing-mini-course
version:            0.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Stevan Andjelkovic and Daniel Gustafsson
maintainer:         symbiont-stevan-andjelkovic@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
  CHANGELOG.md
  LICENSE
  README.md

library
  build-depends:    base ^>=4.14.1.0
  hs-source-dirs:   src
  build-depends:
    , async
    , aeson
    , bytestring
    , containers
    , heaps
    , http-client
    , http-types
    , HUnit
    , microlens-platform
    , QuickCheck
    , random
    , stm
    , text
    , time
    , transformers
    , vector
    , wai
    , warp

  exposed-modules:
    ATMC
    ATMC.Lec1SMTesting
    ATMC.Lec2ConcurrentSMTesting
    ATMC.Lec3SMContractTesting
    ATMC.Lec4FaultInjection
    ATMC.Lec5.Agenda
    ATMC.Lec5.AwaitingClients
    ATMC.Lec5.Codec
    ATMC.Lec5.Configuration
    ATMC.Lec5.Debug
    ATMC.Lec5.Deployment
    ATMC.Lec5.Event
    ATMC.Lec5.EventLoop
    ATMC.Lec5.EventQueue
    ATMC.Lec5.History
    ATMC.Lec5.Network
    ATMC.Lec5.Options
    ATMC.Lec5.SmartBFT.Machine
    ATMC.Lec5.SmartBFT.Messages
    ATMC.Lec5.SmartBFT.State
    ATMC.Lec5.Random
    ATMC.Lec5.StateMachine
    ATMC.Lec5.StateMachineDSL
    ATMC.Lec5.Time
    ATMC.Lec5.TimerWheel
    ATMC.Lec5.ViewstampReplication.Machine
    ATMC.Lec5.ViewstampReplication.Message
    ATMC.Lec5.ViewstampReplication.State
    ATMC.Lec5SimulationTesting
    Experiment.Simulation

  default-language: Haskell2010

executable lec5
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , advanced-testing-mini-course
    , base

  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -fno-ignore-asserts
