cabal-version:      2.4
name:               advanced-testing-mini-course
version:            0.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Stevan Andjelkovic and Daniel Gustafsson
maintainer:         symbiont-stevan-andjelkovic@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
  CHANGELOG.md
  LICENSE
  README.md

library
  build-depends:    base ^>=4.14.1.0
  hs-source-dirs:   src
  build-depends:
    , async
    , aeson
    , bytestring
    , containers
    , heaps
    , http-client
    , http-types
    , HUnit
    , microlens-platform
    , QuickCheck
    , random
    , stm
    , sqlite-simple
    , text
    , time
    , transformers
    , tree-diff ==0.0.2.1
    , vector
    , wai
    , warp

  exposed-modules:
    ATMC
    ATMC.Lec01SMTesting
    ATMC.Lec02ConcurrentSMTesting
    ATMC.Lec03SMContractTesting
    ATMC.Lec03.QueueInterface
    ATMC.Lec03.Queue
    ATMC.Lec03.QueueTest
    ATMC.Lec03.Service
    ATMC.Lec03.ServiceTest
    ATMC.Lec04FaultInjection
    ATMC.Lec05.Agenda
    ATMC.Lec05.AwaitingClients
    ATMC.Lec05.Codec
    ATMC.Lec05.Configuration
    ATMC.Lec05.Debug
    ATMC.Lec05.Deployment
    ATMC.Lec05.Event
    ATMC.Lec05.EventLoop
    ATMC.Lec05.EventQueue
    ATMC.Lec05.History
    ATMC.Lec05.Network
    ATMC.Lec05.Options
    ATMC.Lec05.SmartBFT.Machine
    ATMC.Lec05.SmartBFT.Messages
    ATMC.Lec05.SmartBFT.State
    ATMC.Lec05.Random
    ATMC.Lec05.StateMachine
    ATMC.Lec05.StateMachineDSL
    ATMC.Lec05.Time
    ATMC.Lec05.TimerWheel
    ATMC.Lec05.ViewstampReplication.Machine
    ATMC.Lec05.ViewstampReplication.Message
    ATMC.Lec05.ViewstampReplication.State
    ATMC.Lec05SimulationTesting
    ATMC.Lec06WhiteboxCheckers
    ATMC.Lec07EfficientEventLoop
    ATMC.Lec08AsyncFileSystemIO
    ATMC.Lec09SMUpgrades
    ATMC.Lec10LibraryOrFramework
    Experiment.Simulation

  default-language: Haskell2010

executable lec5
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , advanced-testing-mini-course
    , base

  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -fno-ignore-asserts
