cabal-version:      2.4
name:               advanced-testing-mini-course
version:            0.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Stevan Andjelkovic and Daniel Gustafsson
maintainer:         symbiont-stevan-andjelkovic@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
  CHANGELOG.md
  LICENSE
  README.md

library
  build-depends:    base ^>=4.14.1.0
  hs-source-dirs:   src
  build-depends:
    , async
    , aeson
    , bytestring
    , containers
    , directory
    , heaps
    , http-client
    , http-types
    , HUnit
    , microlens-platform
    , QuickCheck
    , random
    , stm
    , sqlite-simple
    , text
    , time
    , transformers
    , tree-diff ==0.0.2.1
    , vector
    , wai
    , warp

  exposed-modules:
    Lec00Introduction
    Lec01SMTesting
    Lec02ConcurrentSMTesting
    Lec03SMContractTesting
    Lec03.QueueInterface
    Lec03.Queue
    Lec03.QueueTest
    Lec03.Service
    Lec03.ServiceTest
    Lec04FaultInjection
    Lec04.LineariseWithFault
    Lec05.Agenda
    Lec05.AwaitingClients
    Lec05.Codec
    Lec05.Configuration
    Lec05.Debug
    Lec05.Deployment
    Lec05.Event
    Lec05.EventLoop
    Lec05.EventQueue
    Lec05.History
    Lec05.Network
    Lec05.Options
    Lec05.SmartBFT.Machine
    Lec05.SmartBFT.Messages
    Lec05.SmartBFT.State
    Lec05.Random
    Lec05.StateMachine
    Lec05.StateMachineDSL
    Lec05.Time
    Lec05.TimerWheel
    Lec05.ViewstampReplication.Machine
    Lec05.ViewstampReplication.Message
    Lec05.ViewstampReplication.State
    Lec05SimulationTesting
    Lec06WhiteboxCheckers
    Lec07EfficientEventLoop
    Lec08AsyncFileSystemIO
    Lec09SMUpgrades
    Lec10LibraryOrFramework
    Experiment.Simulation

  default-language: Haskell2010
  ghc-options:      -Wall

executable lec5
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , advanced-testing-mini-course
    , base

  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N -fno-ignore-asserts
