load("@rules_clojure//:rules.bzl", "clojure_namespace", "clojure_library", "clojure_binary")
load("@rules_clojure//:toolchains.bzl", "clojure_toolchain")
load("@rules_java//java:defs.bzl", "java_library")
load("@rules_graal//graal:graal.bzl", "graal_binary")

clojure_toolchain(
    name = "clojure_toolchain_def",
    classpath = [
        "@maven//:org_clojure_clojure",
        "@maven//:org_clojure_core_specs_alpha",
        "@maven//:org_clojure_spec_alpha",
    ],
)

toolchain(
    name = "clojure_toolchain",
    toolchain = ":clojure_toolchain_def",
    toolchain_type = "@rules_clojure//:toolchain",
)

java_library(
    name = "lockfix",
    srcs = ["java/src/lockfix/LockFix.java"],
    deps = ["@maven//:org_clojure_clojure"],
    visibility = ["//src/checker:__subpackages__"],
)

clojure_library(
    name = "checker-lib",
    srcs = ["//src/checker/src/checker:checker-ns"],
    deps = ["@maven//:org_clojure_clojure"], # Doesn't work/not needed?
    aot = ["checker.core"],
    javacopts = [
        "-Djava.awt.headless=true",
    ],
)

graal_binary(
    name = "checker",
    deps = [":checker-lib"],
    reflection_configuration = "native-image/reflection-config.json",
    jni_configuration = "native-image/jni-config.json",
    main_class = "checker.core",
    initialize_at_build_time = [
        "org.sqlite.JDBC",
        "org.sqlite.core.DB$ProgressObserver",
        "org.sqlite.core.DB",
        "org.sqlite.core.NativeDB",
        "org.sqlite.ProgressHandler",
        "org.sqlite.Function",
        "org.sqlite.Function$Aggregate",
        "org.sqlite.Function$Window",
    ],

    c_compiler_option = [
        "-L/nix/store/7bgshg2z70fpcc7adxfag1lgf45yamxh-zlib-1.2.11/lib"
        "-L/nix/store/wphpzw2swy36pm4ph3r1zfvwfj2njxjf-zlib-1.2.11/lib",
        "-F/nix/store/x4h02ax94qfklbfzfm3vci5mrxh9cmzz-apple-framework-Foundation/Library/Frameworks",
    ],

    graal_extra_args = [
        # TODO(stevan): figure out how a better way to get this path:
        "-H:CCompilerPath=/nix/store/kxx4n980xm8qwkk145jidx8s04005yq7-clang-wrapper-7.1.0/bin/clang",
        "-H:+ReportExceptionStackTraces",
        "-H:-CheckToolchain", # Needed for MacOS.
        "-J-Dclojure.spec.skip-macros=true",
        "-J-Dclojure.compiler.direct-linking=true",
        "-J-Dfile.encoding=UTF-8",
        "-J-Djava.awt.headless=true",
        "-J-Dclojure.tools.logging.factory=clojure.tools.logging.impl/slf4j-factory",
        "--report-unsupported-elements-at-runtime",
        "--initialize-at-run-time=sun.font.SunFontManager",
        "--initialize-at-run-time=sun.font.StrikeCache",
        "--initialize-at-run-time=sun.font.SunLayoutEngine",
        "--initialize-at-run-time=sun.font.FontManagerNativeLibrary",
        "--initialize-at-run-time=sun.awt.X11GraphicsConfig",
        "--initialize-at-run-time=javax.imageio.ImageTypeSpecifier",
        "--initialize-at-run-time=sun.java2d.SurfaceData",
        "--initialize-at-run-time='com.sun.imageio.plugins.jpeg.JPEG$JCS'",
        "--initialize-at-run-time='sun.awt.dnd.SunDropTargetContextPeer$EventDispatcher'",
        "--allow-incomplete-classpath",
        "--verbose",
    ],
)
