load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "cli",
    embed = [":cli_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "cli_lib",
    srcs = ["main.go"],
    importpath = "github.com/symbiont-io/detsys-testkit/src/cli",
    visibility = ["//visibility:private"],
    deps = ["//src/cli/cmd"],
    x_defs = {"version": "{STABLE_GIT_COMMIT}"},
)
