load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "db",
    embed = [":db_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "db_lib",
    srcs = ["db.go"],
    importpath = "github.com/symbiont-io/detsys-testkit/src/db",
    visibility = ["//visibility:private"],
    deps = [
        "//src/db/vendor/github.com/mattn/go-sqlite3",
        "//src/db/vendor/github.com/rubenv/sql-migrate",
        "//src/db/vendor/github.com/symbiont-io/detsys-testkit/src/lib",
    ],
)
