cabal-version:      >=1.10
name:               divergence
version:            0.0.0
synopsis:           Find divergence of different tests in detsys
description:
  See README at <https://github.com/symbiont-io/detsys-testkit/tree/main/src/divergence#readme>

bug-reports:        https://github.com/symbiont-io/detsys-testkit/issues
license:            AllRightsReserved
license-file:       LICENSE
author:             Daniel Gustafsson
maintainer:         symbiont-daniel-gustafsson@users.noreply.github.com
copyright:          Copyright (c) 2021 Symbiont Inc
category:           Testing, Distributed Systems
build-type:         Simple
extra-source-files: CHANGELOG.md
tested-with:        GHC ==8.10.4

library
  hs-source-dirs:   src/
  exposed-modules:
    Divergence

  -- GHC boot library dependencies:
  -- (https://gitlab.haskell.org/ghc/ghc/-/blob/master/packages)
  build-depends:
      base              >=4.14 && <4.15
    , bytestring
    , containers
    , filepath

  -- Other dependencies:
  build-depends:
      aeson
    , sqlite-simple
    , text

  default-language: Haskell2010

executable detsys-divergence
  hs-source-dirs:   app/
  main-is:          Main.hs
  build-depends:
      base
    , divergence
    , optparse-generic

  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/symbiont-io/detsys-testkit
