cabal-version:      2.4
name:               journal
version:            0.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license:
license-file:       LICENSE
author:             Stevan Andjelkovic, Daniel Gustafsson
maintainer:         symbiont-stevan-andjelkovic@users.noreply.github.com
copyright:          Copyright (c) 2021-2022 Symbiont Inc
category:           Concurrency, Data Structures
tested-with:        GHC ==8.10.7
extra-source-files:
  CHANGELOG.md
  LICENSE
  README.md
  cbits/atomic.c

library
  hs-source-dirs:   src/

  -- GHC boot library dependencies:
  -- (https://gitlab.haskell.org/ghc/ghc/-/blob/master/packages)
  build-depends:
    , base        ^>=4.14.1.0
    , binary
    , bytestring
    , directory
    , filepath
    , parsec
    , stm
    , unix

  build-depends:
    , mmap
    , network
    , vector

  exposed-modules:
    Journal
    Journal.CRC32
    Journal.Internal
    Journal.Internal.Atomics
    Journal.Internal.Parse
    Journal.Internal.Metrics
    Journal.Internal.ByteBuffer
    Journal.Internal.ByteBufferPtr
    Journal.Internal.BufferClaim
    Journal.Internal.Mmap
    Journal.Internal.Utils
    Journal.Types
    Journal.Types.AtomicCounter

  ghc-options:      -O2
  if os(linux)
    extra-libraries: atomic
  c-sources:        cbits/atomic.c
  default-language: Haskell2010

test-suite test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test/
  main-is:          Main.hs
  other-modules:
    Journal.CRC32Test
    Journal.Internal.AtomicsTest
    Journal.Internal.ByteBufferTest
    Journal.Internal.MmapTest
    JournalTest
    TastyDiscover

  build-depends:
    , async
    , base
    , binary
    , bytestring
    , directory
    , HUnit
    , journal
    , QuickCheck
    , quickcheck-instances
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , vector
    , unix
    , zlib

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -fno-ignore-asserts
  default-language: Haskell2010

executable journal
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , async
    , base        ^>=4.14.1.0
    , bytestring
    , journal
    , network

  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -fno-ignore-asserts
