cabal-version:      2.4
name:               journal
version:            0.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license:
license-file:       LICENSE
author:             Stevan Andjelkovic, Daniel Gustafsson
maintainer:         symbiont-stevan-andjelkovic@users.noreply.github.com
copyright:          Copyright (c) 2021-2022 Symbiont Inc
category:           Concurrency, Data Structures
tested-with:        GHC ==8.10.7
extra-source-files:
  CHANGELOG.md
  LICENSE
  README.md
  cbits/atomic.c
  cbits/mac_falloc.c

flag SkipAssert
  description: Disable running asserts
  default: False
  manual: True

library
  hs-source-dirs:   src
  if os(darwin)
    hs-source-dirs: osx
  if os(linux)
    hs-source-dirs: linux
  if flag(SkipAssert)
    hs-source-dirs: extra/assert/skiprun
  else
    hs-source-dirs: extra/assert/dorun

  -- GHC boot library dependencies:
  -- (https://gitlab.haskell.org/ghc/ghc/-/blob/master/packages)
  build-depends:
    , base        ^>=4.14.1.0
    , binary
    , bytestring
    , directory
    , filepath
    , parsec
    , stm
    , text
    , unix

  build-depends:
    , mmap
    , network
    , vector

  exposed-modules:
    Journal
    Journal.CRC32
    Journal.Internal
    Journal.Internal.Atomics
    Journal.Internal.FileAllocate
    Journal.Internal.Parse
    Journal.Internal.Metrics
    Journal.Internal.ByteBuffer
    Journal.Internal.ByteBufferPtr
    Journal.Internal.BufferClaim
    Journal.Internal.Logger
    Journal.Internal.Mmap
    Journal.Internal.Utils
    Journal.Types
    Journal.Types.AtomicCounter
    Assert

  ghc-options:      -O2
  if os(linux)
    extra-libraries: atomic
  c-sources:
    cbits/atomic.c
  if os(darwin)
    c-sources: cbits/mac_falloc.c
  default-language: Haskell2010

test-suite test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test/
  main-is:          Main.hs
  other-modules:
    Journal.CRC32Test
    Journal.Internal.AtomicsTest
    Journal.Internal.ByteBufferTest
    Journal.Internal.MmapTest
    Journal.Internal.MetricTest
    JournalTest
    TastyDiscover

  build-depends:
    , async
    , base
    , binary
    , bytestring
    , containers
    , directory
    , HUnit
    , journal
    , QuickCheck
    , quickcheck-instances
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , time
    , vector
    , unix
    , zlib

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -fno-ignore-asserts
  default-language: Haskell2010

executable journal
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , async
    , base        ^>=4.14.1.0
    , bytestring
    , journal
    , network

  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -fno-ignore-asserts
