package(default_visibility = ["//visibility:public"])

load(
  "@rules_haskell//haskell:defs.bzl",
  "haskell_binary",
  "haskell_library",
  "haskell_toolchain",
)

haskell_library(
    name = "ldfi-lib",
    src_strip_prefix = "src",
    srcs = glob(['src/**/*.hs']),
    deps = [
        "@stackage//:base",
        "@stackage//:containers",
        "@stackage//:filepath",
        "@stackage//:QuickCheck",
        "@stackage//:sqlite-simple",
        "@stackage//:template-haskell",
        "@stackage//:text",
        "@stackage//:z3",
    ],
)

haskell_binary(
    name = "ldfi2",
    srcs = ["app/Main.hs"],
    deps = [
        "@stackage//:base",
        "@stackage//:optparse-generic",
        "@stackage//:text",
        ":ldfi-lib"
    ],
)
