cabal-version:      >=1.10
name:               ldfi
version:            0.0.0
synopsis:           Lineage-driven fault injection
description:
  See README at <https://github.com/symbiont-io/detsys-testkit/tree/main/src/ldfi#readme>

bug-reports:        https://github.com/symbiont-io/detsys-testkit/issues
license:            AllRightsReserved
license-file:       LICENSE
author:             Stevan Andjelkovic, Daniel Gustafsson
maintainer:         symbiont-stevan-andjelkovic@users.noreply.github.com
copyright:          Copyright (c) 2021 Symbiont Inc
category:           Testing, Distributed Systems
build-type:         Simple
extra-source-files: CHANGELOG.md
tested-with:        GHC ==8.10.3

library
  hs-source-dirs:   src/
  exposed-modules:
    Ldfi
    Ldfi.Estimate
    Ldfi.FailureSpec
    Ldfi.GitHash
    Ldfi.Marshal.Faults
    Ldfi.Prop
    Ldfi.Sat
    Ldfi.Solver
    Ldfi.Storage
    Ldfi.Traces

  other-modules:    Ldfi.GitHashImpl

  -- GHC boot library dependencies:
  -- (https://gitlab.haskell.org/ghc/ghc/-/blob/master/packages)
  build-depends:
      base              >=4.14 && <4.15
    , containers
    , filepath
    , mtl
    , template-haskell

  -- Other dependencies:
  build-depends:
      QuickCheck
    , aeson
    , binary
    , bytestring
    , sqlite-simple
    , text
    , z3

  default-language: Haskell2010

test-suite test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test/
  main-is:          Main.hs
  build-depends:
      base
    , containers
    , HUnit
    , ldfi
    , QuickCheck
    , tasty
    , tasty-hunit

  build-depends:
      tasty-quickcheck
    , z3

  other-modules:
    Driver
    LdfiTest
    Ldfi.EstimateTest

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -fno-ignore-asserts
  default-language: Haskell2010

executable detsys-ldfi
  hs-source-dirs:   app/
  main-is:          Main.hs
  build-depends:
      base
    , ldfi
    , optparse-generic
    , text

  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/symbiont-io/detsys-testkit
